[gd_scene load_steps=19 format=2]

[ext_resource path="res://scene/object/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sounds/music_menu.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/walk.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/craft.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/923f525b6d014589.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/PODVAL.png" type="Texture" id=6]
[ext_resource path="res://scripts/global/Global_node.gd" type="Script" id=24]
[ext_resource path="res://assets/sprites/other/image.png" type="Texture" id=28]
[ext_resource path="res://scripts/animation_player/belya_shum.gd" type="Script" id=41]
[ext_resource path="res://scripts/animation_player/Camera2D.gd" type="Script" id=42]

[sub_resource type="CanvasItemMaterial" id=8]
light_mode = 1

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 28 )
region = Rect2( 33, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 28 )
region = Rect2( 66, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=18]
resource_name = "open_titri"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "open_titri_anim"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect2:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "start"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 13, 15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 7, 9, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect/TextureRect:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_cs"
}, {
"args": [  ],
"method": "stop_cs"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/ColorRect/TextureRect:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "start_game"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game_anim"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect2:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Global_node" type="Node2D"]
z_as_relative = false
script = ExtResource( 24 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 263, 147 )
zoom = Vector2( 0.2, 0.2 )
script = ExtResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 8 )
position = Vector2( 113, 72 )
scale = Vector2( 15.9687, 6.94781 )
z_index = 5
frames = SubResource( 5 )
frame = 2
playing = true
script = ExtResource( 41 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Node2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
autoplay = true
mix_target = 2

[node name="Sounds_player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )

[node name="walk_player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_titri = SubResource( 18 )
anims/start = SubResource( 16 )
anims/start_game = SubResource( 17 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="CanvasLayer/ColorRect/TextureRect" to="." method="_on_TextureRect_gui_input"]
